objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>C1_eligible_age__c</fullName>
        <label>Eligibilité de l&apos;âge</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C2_eligible_niveau_d_tudes__c</fullName>
        <label>Eligibilité du niveau d&apos;études</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_eligible_niveau_xp_pro__c</fullName>
        <label>Eligibilité du niveau d&apos;expérience pro</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C4_eligible_domaine_d_tudes__c</fullName>
        <label>Eligibilité du domaine d&apos;études</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Champ_syst_me_pour_clonage__c</fullName>
        <label>Champ système pour clonage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeAgresso_Poste_Opportunite__c</fullName>
        <description>Ce champ est remplit automatiquement en se basant sur &quot; RecordType + Exercice + Compteur Opp&quot;</description>
        <label>Code Agresso Poste Opportunité</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Code_PO__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Code_PO</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Compte_opportunite__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compteur_Poste_Opp__c</fullName>
        <description>Compteur poste opportunité</description>
        <displayFormat>{000000}</displayFormat>
        <label>Compteur Poste Opp</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Util__c</fullName>
        <label>Data Loader Util</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DatePaiement__c</fullName>
        <label>Date de paiement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_de_debut_de_session_f__c</fullName>
        <formula>Session_de_formation__r.Date_de_debut_de_session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Début</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <formula>IF(
 ISPICKVAL(Opportunity.Contact_central__r.Nature_du_premier_contact__c,&quot;Site mobile&quot;),&quot;ELIGIBLE&quot;,

IF(
 OR( C1_eligible_age__c = &quot;Critère KO&quot;, C2_eligible_niveau_d_tudes__c =&quot;Critère KO&quot;,
C3_eligible_niveau_xp_pro__c = &quot;Critère KO&quot;, C4_eligible_domaine_d_tudes__c =&quot;Critère KO&quot;) 
, &quot;NON ELIGIBLE&quot;, 
 IF(
 OR( C1_eligible_age__c = &quot;Manque critère&quot;, C2_eligible_niveau_d_tudes__c =&quot;Manque critère&quot;,
C3_eligible_niveau_xp_pro__c = &quot;Manque critère&quot;, C4_eligible_domaine_d_tudes__c =&quot;Manque critère&quot;) 
, &quot;MANQUE CRITERE&quot;,
IF(
 AND( C1_eligible_age__c = &quot;Critère non actif pour le produit&quot;, C2_eligible_niveau_d_tudes__c =&quot;Critère non actif pour le produit&quot;,
C3_eligible_niveau_xp_pro__c = &quot;Critère non actif pour le produit&quot;, C4_eligible_domaine_d_tudes__c =&quot;Critère non actif pour le produit&quot;) 
,&quot;NON DISPONIBLE&quot;,  
 &quot;ELIGIBLE&quot;
)))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligibilité calculée</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EtatPaiement__c</fullName>
        <label>Etat du paiement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payé</fullName>
                </value>
                <value>
                    <fullName>Non payé</fullName>
                </value>
                <value>
                    <fullName>Annulé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Famille__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Famille__c)</formula>
        <label>Famille</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fin__c</fullName>
        <formula>Session_de_formation__r.Date_de_fin_de_session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fonction__c</fullName>
        <formula>TEXT(Opportunity.Contact_central__r.Fonctions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fonction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Parcours</fullName>
                </value>
                <value>
                    <fullName>Certificat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gamme__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <label>Gamme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Opportunite__c</fullName>
        <formula>Opportunity.X18caracter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Opportunité</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_entree_de_catalogue__c</fullName>
        <formula>PricebookEntryId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id entrée de catalogue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceExternalId__c</fullName>
        <externalId>true</externalId>
        <label>InterfaceExternalId Poste</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JetonPaiement__c</fullName>
        <label>Id paiement</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lieu_de_formation__c</fullName>
        <label>Lieu de formation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModePaiement__c</fullName>
        <label>Mode de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CB online</fullName>
                </value>
                <value>
                    <fullName>Facture</fullName>
                </value>
                <value>
                    <fullName>Gratuit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MontantPaye__c</fullName>
        <label>Montant payé</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motifs_de_non_eligibilite__c</fullName>
        <label>Motifs de non éligibilité</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age trop élevé</fullName>
                </value>
                <value>
                    <fullName>Niveau d’études insuffisant</fullName>
                </value>
                <value>
                    <fullName>Expérience professionnelle incohérente</fullName>
                </value>
                <value>
                    <fullName>Domaine d’études incohérent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NB_d_heure_et_jour_calculer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ce champ se coche par WF : pour tous les produits non Pack et les produits Pack ayant la case à cocher &quot;à la carte&quot;</description>
        <label>NB d&apos;heure et jour à calculer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NomPayeur__c</fullName>
        <label>Nom du payeur</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_du_Contact__c</fullName>
        <formula>Opportunity.Contact_central__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom du Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures__c</fullName>
        <label>Nombre d&apos;heures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_jours__c</fullName>
        <label>Nombre de jours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCTA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Est_un_OCTA__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Poste d&apos;opportunité</relationshipLabel>
        <relationshipName>Poste_d_opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ouverture_candidature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cette coche permet de signaler le déclenchement sur le site EML 3 l’ouverture du dossier de candidature. Valable également pour formation continue longue.</description>
        <label>Ouverture candidature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pack_la_carte__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pack à la carte</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pr_nom_du_contact__c</fullName>
        <formula>Opportunity.Contact_central__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prénom du contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookId__c</fullName>
        <formula>Opportunity.Pricebook2Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PricebookId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProduitFiltreSession__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProduitFiltreSession</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Poste d&apos;opportunité</relationshipLabel>
        <relationshipName>Poste_d_opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recu_ERP_Affaire__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Champ qui sera rempli par le web service EMLYON pour définir les postes opportunités (formation courte et programme long diplômant) à envoyer vers à AGRESSO</description>
        <label>Recu ERP Affaire</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemplissageDossierCANEL__c</fullName>
        <label>Remplissage Dossier CANEL</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SF_Date_derniere_modification__c</fullName>
        <label>SF Date derniere modification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SS_Date_derniere_modification__c</fullName>
        <label>SS Date derniere modification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Formation_pour_WF__c</fullName>
        <formula>Session_de_formation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Formation pour WF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <formula>Session_de_formation__r.x18caracteres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_de_formation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session de formation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ProduitFiltreSession__c</field>
                <operation>equals</operation>
                <valueField>Session__c.Produits__c</valueField>
            </filterItems>
            <filterItems>
                <field>Session__c.Statut__c</field>
                <operation>notEqual</operation>
                <value>Complète</value>
            </filterItems>
            <filterItems>
                <field>Session__c.Statut__c</field>
                <operation>notEqual</operation>
                <value>Abandonnée</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Liste prévisionnelle inscrit</relationshipLabel>
        <relationshipName>Poste_d_opportunit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_formation_ancienne_valeur__c</fullName>
        <label>Session formation ancienne valeur</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_selection_ancienne_valeur__c</fullName>
        <label>Session selection ancienne valeur</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut__c</fullName>
        <formula>TEXT(Opportunity.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statut</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut_candidature__c</fullName>
        <label>Statut Candidature CANEL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>.</fullName>
                </value>
                <value>
                    <fullName>Non-recevable (Hors profil)</fullName>
                </value>
                <value>
                    <fullName>Abandon</fullName>
                </value>
                <value>
                    <fullName>Dossier débuté</fullName>
                </value>
                <value>
                    <fullName>Dossier avancé</fullName>
                </value>
                <value>
                    <fullName>En finalisation</fullName>
                </value>
                <value>
                    <fullName>Candidat</fullName>
                </value>
                <value>
                    <fullName>Admissible</fullName>
                </value>
                <value>
                    <fullName>Non-admis(sible)</fullName>
                </value>
                <value>
                    <fullName>Abandon candidature</fullName>
                </value>
                <value>
                    <fullName>Admis</fullName>
                </value>
                <value>
                    <fullName>Admis sous condition</fullName>
                </value>
                <value>
                    <fullName>Inscrit</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Renonciation</fullName>
                </value>
                <value>
                    <fullName>Incohérent</fullName>
                </value>
                <value>
                    <fullName>Non admissible</fullName>
                </value>
                <value>
                    <fullName>Non admis</fullName>
                </value>
                <value>
                    <fullName>Admis board 1</fullName>
                </value>
                <value>
                    <fullName>Admis board 2</fullName>
                </value>
                <value>
                    <fullName>Non admis board 1</fullName>
                </value>
                <value>
                    <fullName>Non admis board 2</fullName>
                </value>
                <value>
                    <fullName>Pré-inscrit</fullName>
                </value>
                <value>
                    <fullName>Renonciation après paiement</fullName>
                </value>
                <value>
                    <fullName>Abandon après candidature</fullName>
                </value>
                <value>
                    <fullName>Abandon avant oral</fullName>
                </value>
                <value>
                    <fullName>En liste d&apos;attente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_dossier__c</fullName>
        <label>Statut Dossier CANEL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_produit__c</fullName>
        <description>Champ permettant de stocker le type d&apos;enregistrement du produit. Il est nécessaire de la stocker pour des raisons techniques : pour les parcours un roll-up sur l&apos;opportunité permet de savoir si on est dans le cas d&apos;un parcours.</description>
        <label>Type produit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18caracter__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18caracter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>session_de_selection__c</fullName>
        <inlineHelpText>CANEL</inlineHelpText>
        <label>Session de sélection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <validationRules>
        <fullName>Localisation_obligatoire</fullName>
        <active>true</active>
        <description>Ajout de produit localisable que s&apos;il y a une localisation définie sur l&apos;opportunité. Concerne le type d’enregistrement &apos;&apos;relations employeur&apos;&apos;.</description>
        <errorConditionFormula>AND(
Opportunity.RecordType.Name = &quot;Relations Employeur&quot;,
ISBLANK( TEXT(Opportunity.Localisation__c )),
Product2.Localisation_pr_ciser_dans_l_opp__c = TRUE)</errorConditionFormula>
        <errorMessage>Le choix de ce produit nécessite que vous remplissiez d&apos;abord la localisation de l&apos;opportunité</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ouverture_candidature_non_modifiable</fullName>
        <active>true</active>
        <description>Si le produit de l&apos;opportunité n&apos;est pas un produit de type &quot;selection&quot;, alors les profils EML ne pourront pas modifier le champ &quot;ouverture candidature&quot; (case à cocher).</description>
        <errorConditionFormula>AND 
(ISCHANGED(Ouverture_candidature__c), 
  $Profile.Name = &quot;EML&quot;, 
   Product2.RecordType.DeveloperName &lt;&gt; &quot;Selection&quot;)</errorConditionFormula>
        <errorDisplayField>Ouverture_candidature__c</errorDisplayField>
        <errorMessage>Vous ne pouvez pas modifier ce champ car le produit de l&apos;opportunité n&apos;est pas de type &quot;Selection&quot;</errorMessage>
    </validationRules>
</CustomObject>